Android tablet problem fixed Margin, Padding, ArrowHeight, ArrowWidth properties added

--- a/myToolTipSample/myToolTipSample/MainPage.xaml
+++ b/myToolTipSample/myToolTipSample/MainPage.xaml
@@ -19,6 +19,7 @@
                 x:Name="btn"
                 effects:ToolTipEffect.BackgroundColor="Silver"
                 effects:ToolTipEffect.IsVisible="True"
+                effects:ToolTipEffect.Margin="10"
                 effects:ToolTipEffect.Position="Bottom"
                 effects:ToolTipEffect.Text="Here is a sample text for this tool tip that can help us later, here is more text to showcase the tooltip bottom"
                 effects:ToolTipEffect.TextColor="Teal"
@@ -34,7 +35,8 @@
                         HorizontalOptions="FillAndExpand"
                         VerticalOptions="FillAndExpand">
                         <Label
-                            HorizontalOptions="FillAndExpand"   FontSize="Small"  
+                            FontSize="Small"
+                            HorizontalOptions="FillAndExpand"
                             Text="Here is a sample text for this tool tip that can help us later, here is more text to showcase the tooltip bottom"
                             TextColor="Black"
                             VerticalOptions="FillAndExpand" />
@@ -46,8 +48,12 @@
                 x:Name="btn2"
                 effects:ToolTipEffect.BackgroundColor="Blue"
                 effects:ToolTipEffect.IsVisible="True"
+                effects:ToolTipEffect.Padding="10"
+                effects:ToolTipEffect.CornerRadius="10"
                 effects:ToolTipEffect.Position="Right"
-                effects:ToolTipEffect.Text="Here is a sample text for this tool tip that can help us later, here is more text to showcase the tooltip right"
+                effects:ToolTipEffect.Width="10"
+                  effects:ToolTipEffect.Height="20"
+                effects:ToolTipEffect.Text="Here is a sample text for this tool tip that can help us later,&#10; here is more text to showcase the tooltip right"
                 BackgroundColor="Pink"
                 HeightRequest="40"
                 HorizontalOptions="Start"
@@ -58,6 +64,7 @@
                 x:Name="btn3"
                 effects:ToolTipEffect.BackgroundColor="Green"
                 effects:ToolTipEffect.IsVisible="True"
+                effects:ToolTipEffect.Padding="5"
                 effects:ToolTipEffect.Position="Left"
                 effects:ToolTipEffect.Text="Here is a sample text for this tool tip that can help us later, here is more text to showcase the tooltip left"
                 HeightRequest="100"
@@ -70,6 +77,7 @@
                 x:Name="btn4"
                 effects:ToolTipEffect.BackgroundColor="Navy"
                 effects:ToolTipEffect.IsVisible="True"
+                effects:ToolTipEffect.Padding="3"
                 effects:ToolTipEffect.Position="Top"
                 effects:ToolTipEffect.Text="Here is a sample text for this tool tip that can help us later, here is more text to showcase the tooltip top"
                 BackgroundColor="LightBlue"
